# StockMaster-Sistema-de-gerenciamento-de-estoque

./: .txt initialize_repo.ps1  README.md  initialize_repo.sh
StockMaster-Sistema-de-gerenciamento-de-estoque/: .gitignore  CMakeLists.txt  Projeto AED.docx  README.md  classificação e categoria  projeto final.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/: main.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/analise_custo_estoque/include/: analise.cpp  analise.h
StockMaster-Sistema-de-gerenciamento-de-estoque/src/analise_custo_estoque/src/: analise.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/classificacao_categoria/include/: categoria.h  classificacao.h
StockMaster-Sistema-de-gerenciamento-de-estoque/src/classificacao_categoria/src/: categoria.cpp  classificacao.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/controle_acesso/include/: autenticacao.h  autorizacao.h  controle.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/controle_acesso/src/: autenticacao.cpp  autorizacao.cpp
StockMaster-Sistema-de-gerenciamento-de-estoque/src/gestao_entrada_saida/include/: entrada.h  saida.h
StockMaster-Sistema-de-gerenciamento-de-estoque/src/gestao_entrada_saida/src/: saida.cpp  (+1 more)
StockMaster-Sistema-de-gerenciamento-de-estoque/src/monitoramento_estoque/: CMakeLists.txt
StockMaster-Sistema-de-gerenciamento-de-estoque/tests/: CMakeLists.txt
StockMaster-Sistema-de-gerenciamento-de-estoque/tests/include/: test_monitoramento_estoque.h
StockMaster-Sistema-de-gerenciamento-de-estoque/tests/src/: test_monitoramento_estoque.cpp
(+3 files in other folders)
